Yen-Chen Lin Website_files/style.css
html, body {
  height: 100%;
  font-family: 'Roboto', sans-serif;
  color: #444;
}
#header {
  width: 100%;
  height: 400px;
  font-weight: 300;
  color: white;
  margin-bottom: 40px;
}
.bg1 {
  background-image: url('nthu.png');
  background-repeat: no-repeat;
  background-position: center center;
  background-size: auto 110%;
}
.bg2 {
  background-color: #299DB6;
}

/* Medium image loading tricks start*/
.placeholder {
  width: 100%;
  height: 100%;
  background-color: #9B9B9B;
  background-size: cover;
  background-repeat: no-repeat;
  position: relative;
  overflow: hidden;
}
.placeholder img {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: opacity 1s linear;
}
.placeholder img.loaded {
  opacity: 1;
}
.img-small {
  filter: blur(50px);
}
/* Medium image loading tricks end*/

#headerblob {
  position: absolute;
  left: 27%;
  top: 165px;
  width: 80%;
}
#headertext {
  font-size: 26px;
  font-weight: 400;
  margin-top: 50px;
  margin-left: 220px;
}
.imgme {
  border: 3px solid white;
  /* box-shadow: #AAA 0px 0px 4px 0px; */
  float: left;
}
#htname {
  font-size: 46px;
  font-weight: 400;
}
#htdesc {
  font-size: 18px;
  font-weight: 300;
  margin-top: -6px;
}
#htem {
  font-size: 14px;
  font-weight: 300;
  margin-bottom: 10px;
}
@media (max-width: 768px) {
  #headerblob {
    text-align: center;
    position: absolute;
    top: 100px;
    left: 0;
    width: 100%;

  }
  .imgme {
    float: none;
  }
  #headertext {
    margin: 20px 0;
  }
  #htname {
    font-size: 28px;
  }
  #htdesc {
    font-size: 16px;
  }
}
#topnav {
  position: absolute;
  top: 0;
  right: 0;
  padding: 5px 10px 5px 10px;
  margin: 10px;
  border: 1px solid #FFF;
}
#topnav a {
  color: white;
}
#topnav a:hover {
  text-decoration: none;
}
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
li {
  display: inline;
}
#topnav ul {
  font-size: 26px;
}
.svgico {
  display: inline-block;
}
#timeline {
  font-size: 20px;
  font-weight: 300;
}
@media (min-width: 768px) {
  .timelineitem:nth-child(odd) {
    margin-left: 50%;
    border-left: 5px solid #333;
    text-align: left;
  }
  .timelineitem:nth-child(even) {
    margin-right: 50%;
    margin-left: 5px;
    border-right: 5px solid #333;
    text-align: right;
  }
  .timelineitem {
    width: 50%;
    position: relative;
    padding: 20px;
  }
  .timelineitem:nth-child(odd):before {
   left: -8px;
  }
  .timelineitem:nth-child(even):before {
    right: -8px;
  }
}

.timelineitem:before {
  width: 11px;
  height: 11px;
  background: #333;
  content: "";
  display: block;
  position: absolute;
  top: 0;
  border-radius: 5px;
}

@media (max-width: 768px) {
  .timelineitem {
    border-left: 5px solid #333;
    text-align: left;
    margin-left: 10px;
    padding: 5px;
    position: relative;
  }
  .timelineitem:before {
    left: -8px;
  }
}

.tdate {
  font-size: 18px;
  font-weight: 400;
  margin-bottom: -5px;
  color: rgb(132,0,0);
}
.ttitle {
  font-size: 20px;
  font-weight: 400;
}
.tdesc {
  font-size: 18px;
  font-weight: 300;
}
@media (max-width: 768px) {
  .tdate {
    font-size: 16px;
  }
  .ttitle {
    font-size: 16px;
  }
  .tdesc {
    font-size: 16px;
  }
}
.thigh {
  color: #070;
}
.quote {
  color: #777;
  text-align: center;
  font-style: italic;
  font-weight: 300;
  padding: 90px 0 50px;
}
.quote blockquote {
  font-size: 28px;
}
no-bottom-padding-h2 {
  text-align: left;
  font-weight: 300;
  font-size: 50px;
  padding: 40px 0px 0px;
}
h2 {
  text-align: left;
  font-weight: 300;
  font-size: 50px;
  padding: 40px 0px 60px;
}
h4 {
  text-align: left;
  padding: 0px 0px 60px;
}
#sitefooter {
  height: 300px;
  margin-top: 200px;
  background-color: #F1F3F4;
}
hr.soft {
  border: 0;
  height: 1px;
  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
  background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
  background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
  background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
  padding: 0;
  margin: 0;
}
.pubt {
  font-size: 18px;
  color: #000;
}
@media (max-width: 768px) {
  .pubt {
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10px;
  }
  .pubd {
    text-align: justify;
  }
}
.pubd {
  font-size: 18px;
  font-weight: 300;
}
.pubimg {
  text-align: center;
}
.pubimg img {
  max-width: 100%;
}
.puba {
  font-size: 18px;
  font-weight: 300;
  color: #900;
}
.pubv {
  color: #090;
  font-size: 16px;
}
.publ {
  padding-top: 10px;
}
.publ li {
  border: 1px solid #CCC;
  padding: 5px;
  margin: 5px 2px;
  display: inline-block;
}
.pubwrap {
  padding-bottom: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid #DDD;
}
.pub {
}
.pp {
  text-align: center;
  margin-bottom: 60px;
}
.pp img {
  border: 3px solid #FFF;
  box-shadow: #BBB 0px 0px 5px 0px;
}
.imgb {
  max-width: 300px;
}
.imgsm {
  height: 220px;
}
.ppt {
  font-size: 30px;
  font-weight: 300;
  color: #000;
  margin-top: 20px;
  margin-bottom: 10px;
}
.ppd {
  font-size: 18px;
  text-align: justify;
  color: #444;
  font-weight: 300;
}
.pp blockquote {
  text-align: right;
}
#moreprojects {
  display: none;
}
#morepubs {
  display: none;
}
.showmore {
  border: 1px solid #CCC;
  padding: 10px;
  font-size: 24px;
  width: 200px;
  text-align: center;
  color: #999;
  margin: 0px auto;
  cursor: pointer;
  margin-bottom: 50px;
}
.showmore:hover {
  color: #333;
}

.miscitem {
  margin: 10px 0px 60px;
}
.miscimg img {
  height: 50px;
  float: left;
  margin-right: 10px;
  margin-top: -10px;
}
.colorrect {
  width: 50px;
  height: 50px;
  float: left;
  margin-right: 10px;
  margin-top: -10px;
  background-color: #444;
}
.miscd {
  font-size: 18px;
  font-weight: 300;
}

.umisc {
  font-size: 16px;
  font-weight: 300;
  color: #555;
}
#img231n {
  border-radius: 10px;
  max-width: 100%;
}
.ctr {
  text-align: center;
  margin-bottom: 40px;
}
.hht {
  font-size: 20px;
  margin-bottom: 20px;
  font-weight: 300;
}

img.noborder {
    border: 0px;
    -moz-box-shadow: 0px 0px 0px rgba(0, 0, 0, .0);
    -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, .0);
    box-shadow: 0px 0px 0px rgba(0, 0, 0, .0);
    border-radius: 0px 0px 0px 0px;
    background: none;
}

